<resources>
    <string name="app_name">ECGM</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="Course_name">E.C.G.M.</string>
    <string name="Login_Subtitle">Entreprise Control Goal Management</string>
    <string name="logo_image">Logo Image</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="click_to_login">Click Here to Login</string>
    <string name="click_to_Register">Click Here to Register</string>
    <string name="register_account">Register Account</string>
    <string name="username">Username\n</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="create_project">Create Project</string>
    <string name="manage_users">Manage Users</string>
    <string name="reports">Reports</string>
    <string name="my_current_tasks">My Current Tasks</string>
    <string name="my_finished_tasks">My Finished Tasks</string>
    <string name="finished_projects">Finished Projects</string>
    <string name="team">Team</string>
    <string name="projects">Projects</string>
    <string name="tasks">Tasks</string>
    <string name="edit_project">Edit Project</string>
    <string name="remove_project">Remove Project</string>
    <string name="add_users_to_project">Add Users to Project</string>
    <string name="add_task_to_project">Add Task to Project</string>
    <string name="view_finished_tasks">View Finished Tasks</string>
    <string name="export_project_stats">Export Project Stats</string>
    <string name="export_user_stats">Export User Stats</string>
    <string name="validate_project">Validate Project</string>
    <string name="edit_task">Edit Task</string>
    <string name="continue_task">Continue Task</string>
    <string name="export_task_stats">Export Task Stats</string>
    <string name="finish_task">Finish Task</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="score">Score</string>
    <string name="user_name_rating">User Name</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="completion_0">Completion: 0%</string>
    <string name="project_name">Project Name</string>
    <string name="observation_description">Observation Description</string>
    <string name="observation">Observation:</string>
    <string name="project_name_create">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="create">Create</string>
    <string name="select_project_manager">Select Project Manager</string>
    <string name="select_manager">Select Manager</string>
    <string name="select_image">Select Image</string>
    <string name="create_new_user">Create New User</string>
    <string name="choose_image">Choose Image</string>
    <string name="remove_observation">Remove Observation</string>
    <string name="observation_description_continue">Observation Description</string>
    <string name="save_task">Save Task</string>
    <string name="add_observation">Add Observation</string>
    <string name="observations">Observations</string>
    <string name="enter_completion_percentage">Enter completion percentage</string>
    <string name="completion_percentage_0_100">Completion Percentage (0-100)</string>
    <string name="enter_time_spent">Enter time spent</string>
    <string name="time_spent_hours">Time Spent (hours)</string>
    <string name="enter_location">Enter location</string>
    <string name="location">Location</string>
    <string name="choose_date">Choose Date</string>
    <string name="modification_date">Modification Date</string>
    <string name="log_out">Log Out</string>
    <string name="task_name_finished">Task Name</string>
    <string name="task_description_finished">Task Description</string>
    <string name="completion_0_finished">Completion: 0%</string>
    <string name="rate_assigned_users">Rate Assigned Users</string>
    <string name="submit_ratings">Submit Ratings</string>
    <string name="app_users">App Users:</string>
    <string name="observations_closed">Observations</string>
    <string name="assigned_users">Assigned Users</string>
    <string name="time_spent_text">Time Spent Text</string>
    <string name="time_spent">Time Spent:</string>
    <string name="location_text">Location Text</string>
    <string name="location_closed">Location:</string>
    <string name="last_modified_date_text">Last Modified Date Text</string>
    <string name="last_modified_date">Last Modified Date:</string>
    <string name="completion_percentage_text">Completion Percentage Text</string>
    <string name="completion_percentage">Completion Percentage:</string>
    <string name="task_description_text">Task Description Text</string>
    <string name="task_description_closed">Task Description:</string>
    <string name="task_name_closed">Task Name</string>
    <string name="task_name_">Task Name</string>
    <string name="task_description_">Task Description</string>
    <string name="task_description_task">Task Description</string>
    <string name="completion_percentage_">Completion Percentage</string>
    <string name="completion_percentage_task">Completion Percentage</string>
    <string name="last_modified_date_">Last Modified Date</string>
    <string name="last_modified_date_task">Last Modified Date</string>
    <string name="location_">Location</string>
    <string name="location_task">Location</string>
    <string name="time_spent_">Time Spent</string>
    <string name="time_spent_task">Time Spent</string>
    <string name="assigned_users_">Assigned Users</string>
    <string name="observations_">Observations</string>
    <string name="name_register">Name</string>
    <string name="more_options">More options</string>
    <string name="manager_name">Manager Name:</string>
    <string name="project_description_project">Project Description:</string>
    <string name="project_name_project">Project Name:</string>
    <string name="observations_finish">Observations</string>
    <string name="assigned_users_finish">Assigned Users</string>
    <string name="time_spent_finish">Time Spent:</string>
    <string name="time_spent_text_finish_finish">Time Spent Text</string>
    <string name="location_text_finish_finish">Location Text</string>
    <string name="location_finish">Location:</string>
    <string name="last_modified_date_text_finish_finish">Last Modified Date Text</string>
    <string name="last_modified_date_finish">Last Modified Date:</string>
    <string name="completion_percentage_text_finish">Completion Percentage Text</string>
    <string name="completion_percentage_finish">Completion Percentage:</string>
    <string name="task_description_text_finish">Task Description Text</string>
    <string name="task_description_finish">Task Description:</string>
    <string name="task_name_finish">Task Name</string>
    <string name="more_options_finish">More options</string>
    <string name="profile_image">Profile Image</string>
    <string name="name_edit_user">Name</string>
    <string name="username_edit_user">Username</string>
    <string name="email_edit_user">Email</string>
    <string name="save_edit_user">Save</string>
    <string name="delete_edit_user">Delete</string>
    <string name="delete_task_edit_task">Delete Task</string>
    <string name="save_taskedit_task">Save Task</string>
    <string name="assigned_users_edit_task">Assigned Users</string>
    <string name="enter_completion_percentage_edit_task">Enter Completion Percentage</string>
    <string name="completion_percentage_edit_task">Completion Percentage</string>
    <string name="enter_task_description_edit_task">Enter Task Description</string>
    <string name="task_description_edit_task">Task Description</string>
    <string name="enter_task_name_edit_task">Enter Task Name</string>
    <string name="task_name_edit_task">Task Name</string>
    <string name="update_edit_project">Update</string>
    <string name="select_manager_edit_project">Select Manager</string>
    <string name="select_project_manager_edit_project">Select Project Manager</string>
    <string name="project_description_edit_project">Project Description</string>
    <string name="project_name_edit_project">Project Name</string>
    <string name="select_image_edit_project">Select Image</string>
    <string name="name_create_user">Name</string>
    <string name="username_create_user">Username</string>
    <string name="email_create_user">Email</string>
    <string name="password_create_user">Password</string>
    <string name="select_profile_image_create_user">Select Profile Image</string>
    <string name="profile_image_create_user">Profile Image</string>
    <string name="register_create_user">Register</string>
    <string name="task_name_create_task">Task Name</string>
    <string name="task_description_create_task">Task Description</string>
    <string name="assign_users_create_task">Assign Users</string>
    <string name="create_task_create_task">Create Task</string>
    <string name="select_image_create_project">Select Image</string>
    <string name="project_name_create_project">Project Name</string>
    <string name="project_description_create_project">Project Description</string>
    <string name="select_project_manager_create_project">Select Project Manager</string>
    <string name="select_manager_create_project">Select Manager</string>
    <string name="create_create_project">Create</string>
    <string name="language">Language</string>
</resources>